@@ -2,5 +2,5 @@
 <object name="portal_catalog" meta_type="Plone Catalog Tool">
   <!-- Add indexes here on penalty of death or worse.
        See add_catalog_indexes in setuphandlers.py instead. -->
-  <column value="document_date"/>
+  <column value="documentDate"/>
 </object>
